# Fever-module-chatbot

./: .coverage  Dockerfile  README.md  docker-compose.yml  env.example  langgraph.json  pyproject.toml  pytest.ini  requirements.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
documentation/: api-reference.md  contributing.md  getting-started.md  index.md  prompt-engineering.md  testing.md
landing/: README.md  build_tests_data.py  index.html  tests_data.json
scripts/: chat_ui.html  cli_chat.py  run_dev.sh  smoke_dialog.py
src/api/: auth.py  db.py  feedback.py  main.py
src/config/: settings.py
src/fever_routing/: agent.py  dev_graph.py  state.py
src/fever_routing/utils/: README.md  __init__.py  extraction_schema.py  history.py  intent_schema.py  logging.py  models.py
tests/: conftest.py
tests/agents/: KNOWN_LIMITATIONS.md  __init__.py  judge.py  patient_simulator.py  runner.py
tests/agents/personas/: 01_critical_neonate_panic.yaml  02_critical_infant_5m_high_fever.yaml  03_critical_very_high_4y.yaml  (+22 more)
tests/api/: test_auth.py  test_feedback.py  test_main.py  test_stream.py
tests/fever_routing/: test_agent_graph.py  test_checklist.py  test_multi_turn_flow.py  test_red_flags.py  test_red_flags_comprehensive.py  test_triage.py  test_triage_extensive.py
tests/integration/: conftest.py  test_agentic_ambiguous.py  test_agentic_conversational.py  test_agentic_home.py  test_agentic_safety.py  test_agentic_secondary.py  test_chat_endpoint.py
tests/organized/: README.md
(+31 files in other folders)
