[project]
name = "langgraph-platzi-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "langchain[openai]>=1.0.0a12",
    "langchain-anthropic>=1.0.0a2",
    "langchain-openai>=1.0.0a3",
    "langchain-google-genai>=2.0.0",
    "langchain-tavily>=0.2.12",
    "langgraph>=1.0.0a4",
    "langgraph-supervisor>=0.0.28",
    "fastapi[standard]>=0.118.2",
    "langgraph-checkpoint-postgres>=2.0.25",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "twilio>=9.8.7",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "langgraph-cli[inmem]>=0.4.2",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
